# TPI

./: FasterTensorProductInterpolation.c  MANIFEST  MANIFEST.in  Makefile  README.md  TODO  TPI.c  TPI.pyd  TPI.pyx  TensorProductInterpolation.c  TensorProductInterpolation.h  Tutorial.ipynb  __init__.c  __init__.py  __init__.pyx  license.rst  pyproject.toml  setup.py  test.py
conda/: meta.yaml
tests/: test_TPI.py
